QE-905 Component media-cta-banner: content overlapping issue resolved

--- a/wp-content/themes/quarkexpeditions/src/front-end/components/media-cta-banner/style.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/media-cta-banner/style.scss
@@ -59,20 +59,22 @@
 	&--dark {
 		position: relative;
 
-		&::after {
-			position: absolute;
-			content: "";
-			top: 0;
-			left: 0;
-			bottom: 0;
-			right: 0;
-			width: 100%;
-			height: 100%;
-			opacity: 0.9;
-			background-image: linear-gradient(180deg, var(--color-black) 30%, rgba(255, 255, 255, 0.05) 80%);
+		#{$self}__image-wrap {
+			&::after {
+				position: absolute;
+				content: "";
+				top: 0;
+				left: 0;
+				bottom: 0;
+				right: 0;
+				width: 100%;
+				height: 100%;
+				opacity: 0.9;
+				background-image: linear-gradient(180deg, var(--color-black) 30%, rgba(255, 255, 255, 0.05) 80%);
 
-			@media screen and (min-width: grid-size(md)) {
-				background-image: linear-gradient(90deg, var(--color-black) 25%, rgba(0, 0, 0, 0.05) 70%);
+				@media screen and (min-width: grid-size(md)) {
+					background-image: linear-gradient(90deg, var(--color-black) 25%, rgba(0, 0, 0, 0.05) 70%);
+				}
 			}
 		}
 
@@ -81,22 +83,24 @@
 		}
 	}
 
-	&__image {
+	&__image-wrap {
 		position: absolute;
-		top: 0;
-		left: 0;
-		bottom: 0;
-		right: 0;
+		inset: 0;
+		width: 100%;
+		height: 100%;
+	}
+
+	&__image {
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
+
 	}
 
 	&__content {
 		max-width: 640px;
 		margin: 0;
 		position: relative;
-		z-index: 1;
 
 		> * {
 			margin-top: var(--spacing-5);
